--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     font-family: Arial;
-    background-color: turquoise;
+    background-color: rgb(0,240,232);
+    color: rgb(0,219,212);
 }
 #phonenum{
     width: 100%;
@@ -45,5 +46,6 @@ a:after{
     color:black;
 }
 #here{
-    cursor: default;
+    cursor: text;
+    color: rgb(0,219,212)
 }
