--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 html{
     width: 100%;
     height: 100%;
+    background-image: url('https://img.freepik.com/free-vector/stylish-hexagonal-line-pattern-background_1017-19742.jpg?size=626&ext=jpg')
 }
 .keyboard{
     display: flex;
